--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,9 @@ dependencies {
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
-    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
-    implementation "androidx.activity:activity-compose:1.8.0-alpha01"
+//    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+//    implementation "androidx.activity:activity-compose:1.8.0-alpha01"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
 
     // Compose Nav Destinations
@@ -99,7 +98,6 @@ dependencies {
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
@@ -108,6 +106,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
+
+    // GSON converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
